# meridian

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  deny.toml  docker-compose.cluster.yml  docker-compose.yml  flake.nix  package.json  tsconfig.base.json
.changeset/: align-v1.md  cli-initial-release.md  config.json  devtools-latency-wal-history.md  effect-deep-integration.md  fix-issuetoken-json.md  granular-permissions-and-ai-adapters.md  orset-tree-encryption-session-revocation.md  python-sdk-e2e-crypto.md  query-engine-and-live-queries.md  release-1.5.0.md  rga-crdt.md  rpc-live-queries-devtools.md  tree-crdt.md  ts6-effect-audit.md  ttl-awareness-release.md
.github/workflows/: ci.yml  release.yml
contrib/: env.example  meridian.service
crates/meridian-client/: Cargo.toml  README.md
crates/meridian-client/src/: auth.rs  client.rs  codec.rs  error.rs  http.rs  lib.rs  op_queue.rs
crates/meridian-client/src/crypto/: aes_gcm.rs  ed25519.rs  mod.rs
crates/meridian-client/src/handles/: awareness.rs  gcounter.rs  lwwregister.rs  mod.rs  orset.rs  pncounter.rs  presence.rs  rga.rs  tree.rs
crates/meridian-client/src/transport/: fake.rs  mod.rs  ws.rs
crates/meridian-cluster/: Cargo.toml
crates/meridian-cluster/src/: anti_entropy.rs  cluster_handle.rs  config.rs  error.rs  lib.rs  node_id.rs
crates/meridian-cluster/src/transport/: http_push.rs  mod.rs  redis_pubsub.rs
crates/meridian-cluster/tests/: anti_entropy.rs  http_transport.rs
crates/meridian-core/: Cargo.toml
crates/meridian-core/src/: lib.rs
crates/meridian-core/src/auth/: claims.rs  error.rs  mod.rs  signer.rs
crates/meridian-core/src/crdt/: clock.rs  crdtmap.rs  gcounter.rs  lwwregister.rs  mod.rs  orset.rs  pncounter.rs  presence.rs  registry.rs  rga.rs  tree.rs
crates/meridian-core/src/namespace/: mod.rs
crates/meridian-core/src/protocol/: mod.rs
crates/meridian-core/src/query/: mod.rs
crates/meridian-core/tests/: crdt_properties.rs
crates/meridian-edge/: Cargo.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
crates/meridian-edge/src/: auth.rs  durable_object.rs  http.rs  lib.rs  wal.rs  ws.rs
crates/meridian-edge/tests/: edge.test.ts  helpers.ts
crates/meridian-pg/: Cargo.toml  meridian_pg.control  pgrx.toml
crates/meridian-pg/sql/: meridian--0.1.0.sql
crates/meridian-pg/src/: lib.rs  trigger.rs  types.rs  wal_consumer.rs
crates/meridian-pg/src/types/: gcounter.rs  lwwreg.rs  mod.rs  orset.rs  pncounter.rs  rga.rs  tree.rs
crates/meridian-storage/: Cargo.toml
crates/meridian-storage/src/: error.rs  lib.rs  store.rs  utils.rs  wal_backend.rs
crates/meridian-storage/src/memory/: mod.rs  store.rs  wal.rs
crates/meridian-storage/src/postgres/: mod.rs  store.rs  wal.rs
crates/meridian-storage/src/redis_backend/: mod.rs  store.rs  wal.rs
crates/meridian-storage/src/s3_archive/: client.rs  config.rs  mod.rs  segment.rs  wal.rs
crates/meridian-storage/src/sled/: mod.rs  store.rs  wal.rs
crates/meridian-storage/tests/: postgres_integration.rs  redis_integration.rs  s3_archive_integration.rs
docs/: docs.json  edge.mdx  introduction.mdx
docs/sdk/: agents.mdx  cli.mdx  client.mdx  devtools.mdx  encryption.mdx  error-handling.mdx  installation.mdx  live-query.mdx  offline.mdx  permissions.mdx  postgres.mdx  query.mdx  react.mdx  rust.mdx  signing.mdx  ttl.mdx
docs/sdk/crdts/: awareness.mdx  crdtmap.mdx  gcounter.mdx  lwwregister.mdx  orset.mdx  pncounter.mdx  presence.mdx  rga.mdx  tree.mdx
docs/self-hosting/: clustering.mdx  configuration.mdx  docker.mdx  linux.mdx  monitoring.mdx  sse.mdx  storage.mdx  tokens.mdx
examples/ai-agents/: README.md  package.json  tsconfig.json
examples/ai-agents/agents/: audit.ts  coordinator.ts  debate.ts  memory.ts  run.ts  tool-use.ts  worker.ts
examples/ai-agents/ui/: index.html  package.json  tsconfig.json
examples/ai-agents/ui/src/: AgentBoard.tsx  App.tsx  DebateBoard.tsx  MemoryBoard.tsx  ToolUseBoard.tsx
examples/collaborative-workspace/: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
examples/collaborative-workspace/src/: main.ts
examples/cursors/: CHANGELOG.md  index.html  package.json  tsconfig.json
examples/cursors/src/: App.tsx  Canvas.tsx  colors.ts  main.tsx
examples/postgres-articles/: CHANGELOG.md  README.md  client.ts  package.json  schema.sql  seed.sql  simulate.sql
examples/ratatui-game/: Cargo.toml  README.md
examples/ratatui-game/src/: main.rs
nix/: checks.nix  crane.nix  devshell.nix  module.nix
sdk/: README.md  package.json  tsconfig.json
sdk/src/: client.ts  codec.ts  errors.ts  schema.ts
sdk/src/crdt/: gcounter.ts  lwwregister.ts  orset.ts  pncounter.ts  presence.ts
sdk/src/sync/: delta.ts
sdk/src/transport/: http.ts  websocket.ts
sdk/test/: crdt.test.ts  integration.test.ts  sync.test.ts  tsconfig.json
server/: Cargo.toml
server/benches/: crdt.rs
server/src/: cluster.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  server.rs
server/src/api/: mod.rs  router.rs
server/src/api/handlers/: crdt.rs  health.rs  history.rs  metrics.rs  mod.rs  query.rs  sessions.rs  sse.rs  tokens.rs
server/src/api/ws/: handler.rs  mod.rs  protocol.rs  query_registry.rs  session_registry.rs  subscription.rs
server/src/auth/: claims.rs  middleware.rs  mod.rs
server/src/cluster/: pg_transport.rs  wal_replication.rs
server/src/crdt/: client_registry.rs  clock.rs  lwwregister.rs  mod.rs  ops.rs  pncounter.rs  registry.rs
server/src/namespace/: mod.rs
server/src/storage/: error.rs  mod.rs  sled_store.rs  store.rs  wal.rs
server/src/tasks/: crdt_compactor.rs  mod.rs  presence_gc.rs  snapshot_flusher.rs  wal_compactor.rs
server/src/webhooks/: config.rs  dispatcher.rs  mod.rs
server/tests/: crdt_props.proptest-regressions  crdt_props.rs  integration.rs  wal_replication_integration.rs
