[package]
name = "meridian-server"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "meridian"
path = "src/main.rs"

[lib]
name = "meridian_server"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP + WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Storage (0.34 is the last stable; 1.x is alpha — pinning stable)
sled = "0.34"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rmp-serde = "1.3"

# Crypto — exact versions pinned (security requirement, see RUST_GUIDELINES.md §12)
ed25519-dalek = { version = "=2.2.0", features = ["rand_core", "serde"] }
rand = "=0.8.5"   # ed25519-dalek 2.x requires rand 0.8
blake3 = "=1.8.3"

# Concurrent data structures (6.x latest stable; 7.x still rc)
dashmap = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }

# IDs
uuid = { version = "1.22", features = ["v4", "serde"] }

# Base64 for token encoding
base64 = "0.22"
# Hex encoding for key material (config loading)
hex = "0.4"

[dev-dependencies]
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "crdt"
harness = false
