[package]
name = "meridian-server"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "meridian"
path = "src/main.rs"

[lib]
name = "meridian_server"
path = "src/lib.rs"

[features]
default = ["storage-sled"]
storage-sled = ["meridian-storage/storage-sled"]
storage-memory = ["meridian-storage/storage-memory"]
storage-postgres = ["meridian-storage/storage-postgres"]
storage-redis = ["meridian-storage/storage-redis"]
cluster = ["dep:meridian-cluster", "meridian-cluster/transport-redis"]

[dependencies]
# Storage abstraction layer
meridian-storage = { path = "../crates/meridian-storage", default-features = false }
# Cluster support (optional)
meridian-cluster = { path = "../crates/meridian-cluster", optional = true }

# bytes — needed for cluster delta bytes
bytes = "1"

# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP + WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rmp-serde = "1.3"
serde_bytes = "0.11"

# Crypto — exact versions pinned (security requirement, see RUST_GUIDELINES.md §12)
ed25519-dalek = { version = "=2.2.0", features = ["rand_core", "serde"] }
rand = "=0.8.5"   # ed25519-dalek 2.x requires rand 0.8

# Concurrent data structures (6.x latest stable; 7.x still rc)
dashmap = "6"

# HTTP client (webhooks) — exact versions pinned (network/crypto requirement, see RUST_GUIDELINES.md §12)
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
hmac = "=0.12.1"
sha2 = "=0.10.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "=0.24.3"
metrics-exporter-prometheus = { version = "=0.18.1", default-features = false, features = ["http-listener"] }

# IDs
uuid = { version = "1.22", features = ["v4", "serde"] }

# Base64 for token encoding
base64 = "0.22"
# Hex encoding for key material (config loading)
hex = "0.4"

[dev-dependencies]
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"
http-body-util = "0.1"

[[bench]]
name = "crdt"
harness = false
