[package]
name = "meridian-cluster"
version = "0.1.0"
edition = "2024"
description = "Multinode clustering for Meridian — Redis Pub/Sub fan-out + anti-entropy gossip"

[features]
default = []
transport-redis = ["dep:redis"]
transport-http = ["dep:reqwest", "dep:axum"]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
bytes = "1"

# Redis transport (optional)
redis = { version = "0.27", features = ["tokio-comp", "aio"], optional = true }

# HTTP transport (optional)
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"], optional = true }
axum = { version = "0.8", features = ["macros"], optional = true }

# Utilities
thiserror = "2"
tracing = "0.1"
url = { version = "2", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
serde_bytes = "0.11"

# Storage traits (for anti-entropy)
meridian-storage = { path = "../meridian-storage", default-features = false }

[dev-dependencies]
# tokio: add test-util on top of the "full" already in [dependencies]
tokio = { version = "1.45", features = ["test-util"] }
