[package]
name = "meridian-core"
version = "0.1.0"
edition = "2024"
description = "Meridian core — CRDTs, auth, protocol (no runtime dep, compiles to WASM)"
license = "MIT"
repository = "https://github.com/Chahine-tech/meridian"
homepage = "https://github.com/Chahine-tech/meridian"
keywords = ["crdt", "realtime", "sync", "wasm", "collaborative"]
categories = ["data-structures", "network-programming", "wasm"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rmp-serde = "1.3"
serde_bytes = "0.11"

# Crypto — exact versions pinned (security requirement, see RUST_GUIDELINES.md §12)
ed25519-dalek = { version = "=2.2.0", features = ["rand_core", "serde"] }
rand = "=0.8.5"   # ed25519-dalek 2.x requires rand 0.8
# getrandom 0.2 is a transitive dep of rand 0.8 — enable "js" for WASM targets
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
hex = "0.4"

# Error handling
thiserror = "2"

# IDs (ORSet uses Uuid for add-tags)
uuid = { version = "1.22", features = ["v4", "serde"] }

# Observability
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
proptest = "1.10"
