[package]
name = "meridian-edge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core business logic — CRDTs, auth, protocol, namespace (no axum/tokio)
meridian-core = { path = "../meridian-core" }

# Cloudflare Workers SDK (official)
worker = { version = "0.7", features = ["http"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
serde_bytes = "0.11"

# Error handling
thiserror = "2"

# getrandom + uuid need "js" feature for wasm32-unknown-unknown
getrandom = { version = "0.4", features = ["wasm_js"] }
uuid = { version = "1.22", features = ["v4", "serde", "js"] }
# WASM glue
wasm-bindgen = "0.2"
js-sys = "0.3"

