[package]
name = "meridian-pg"
version = "0.1.0"
edition = "2024"
description = "Postgres extension — CRDT types and bidirectional sync for Meridian"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]

[dependencies]
pgrx = { version = "0.12", default-features = false }
meridian-core = { path = "../meridian-core" }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[dev-dependencies]
pgrx-tests = "0.12"

