[package]
name = "meridian-storage"
version = "0.1.0"
edition = "2024"

[features]
default = ["storage-sled"]
storage-sled = ["dep:sled", "dep:tokio"]
storage-memory = []
storage-postgres = ["dep:sqlx", "dep:tokio"]
storage-redis = ["dep:redis", "dep:tokio"]

[dependencies]
# Async runtime — only needed for sled (spawn_blocking) and postgres adapters
tokio = { version = "1.50", features = ["full"], optional = true }

# Storage backends
sled = { version = "0.34", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros"], optional = true }
redis = { version = "0.28", features = ["tokio-comp"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
serde_bytes = "0.11"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "redis"] }
